# CUDA_C_CPP

./: README.md
ex1/: CMakeLists.txt  README.md  ex1.benchmark.md  kernels.cu  kernels.cuh  main.cpp  output.txt
ex2/: CMakeLists.txt  common.h  cpu_add_test.cpp  gpu_memory_test.cu  gpu_memory_test.h  gpu_register_test.cu  gpu_register_test.h  main.cpp  output.txt
